<resources>
    <string name="app_name">ChewieApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_song_queue">Song Queue</string>
    <string name="menu_song_list">Song List</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_my_cards">My Cards</string>
    <string name="menu_my_achievements">My Achievements</string>
    <string name="menu_commands">Commands</string>
</resources>