<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_song_queue"
            android:icon="@drawable/song_queue_icon"
            android:title="@string/menu_song_queue" />
        <item
            android:id="@+id/nav_song_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_song_list" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_my_cards"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_cards" />

    </group>
</menu>