<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dango.chewieapp.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_song_queue"
        android:name="com.dango.songqueue.SongQueueFragment"
        android:label="@string/menu_song_queue"
        tools:layout="@layout/fragment_song_queue" />

    <fragment
        android:id="@+id/nav_song_list"
        android:name="com.dango.songlist.SongListFragment"
        android:label="@string/menu_song_list"
        tools:layout="@layout/fragment_commands" />
</navigation>